--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,10 +7,10 @@ android {
 
     defaultConfig {
         applicationId "org.swisseph"
-        minSdk 21
+        minSdk 24
         targetSdk 31
-        versionCode 4
-        versionName "1.3"
+        versionCode 5
+        versionName "1.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -27,8 +27,10 @@ android {
 }
 
 dependencies {
-    implementation 'swisseph:swe-jyotisa:2.10.02e'
-    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'swisseph:swe-jyotisa:2.10.02f'
+
+    implementation 'org.apache.commons:commons-lang3:3.7'
+    implementation 'commons-io:commons-io:2.6'
 
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
