sourceCompatibility JavaVersion.VERSION_11         targetCompatibility JavaVersion.VERSION_11

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "org.swisseph"
-        minSdk 24
+        minSdk 23
         targetSdk 31
         versionCode 5
         versionName "1.4"
@@ -21,8 +21,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
