--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,13 @@ android {
 }
 
 dependencies {
-    implementation 'swisseph:swe-jyotisa:2.10.03'
+    implementation 'swisseph:swe-jyotisa:2.10.03i'
 
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.6'
 
-    implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.test:rules:1.4.0'
 
     testImplementation 'junit:junit:4.+'
