--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "org.swisseph"
         minSdk 23
         targetSdk 32
-        versionCode 6
-        versionName "2.10.03"
+        versionCode 7
+        versionName "2.10.03j"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    implementation 'swisseph:swe-jyotisa:2.10.03i'
+    implementation 'swisseph:swe-jyotisa:2.10.03j'
 
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.6'
