--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,11 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.6'
 
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'androidx.test:rules:1.5.0'
 
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:'
     testImplementation fileTree(dir: 'ephe', include: ['*.*'])
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
