--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,14 @@ android {
 }
 
 dependencies {
+    implementation 'swisseph:swe:2.10.03j2'
     implementation 'swisseph:swe-jyotisa:2.10.03j2'
 
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.6'
 
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.test:rules:1.5.0'
 
     testImplementation 'junit:junit:'
