--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 allprojects {
-    //buildDir = "T:/apps/${rootProject.name}"
+    buildDir = "T:/apps/${rootProject.name}"
 }
 
 task clean(type: Delete) {
