--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "org.swisseph"
         minSdk 23
         targetSdk 33
-        versionCode 9
-        versionName "2.10.03j3"
+        versionCode 10
+        versionName "2.10.03j3c"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -28,14 +28,15 @@ android {
 }
 
 dependencies {
-    implementation 'swisseph:swe:2.10.03j3'
-    implementation 'swisseph:swe-jyotisa:2.10.03j3'
-    implementation 'swisseph:swe-android:2.10.03j3'
+    implementation 'swisseph:swe:2.10.03j3c'
+    implementation 'swisseph:swe-jyotisa:2.10.03j3c'
+    implementation 'swisseph:swe-android:2.10.03j3c'
 
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.6'
 
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.10"))
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.test:rules:1.5.0'
 
