--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "org.swisseph"
         minSdk 23
         targetSdk 33
-        versionCode 10
-        versionName "2.10.03j3c"
+        versionCode 11
+        versionName "2.10.03j3d"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,12 +30,12 @@ android {
 dependencies {
     implementation 'swisseph:swe:2.10.03j3c'
     implementation 'swisseph:swe-jyotisa:2.10.03j3c'
-    implementation 'swisseph:swe-android:2.10.03j3c'
+    implementation 'swisseph:swe-android:2.10.03j3d'
 
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.6'
 
-    implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.9.20'))
+    implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.9.21'))
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.test:rules:1.5.0'
