--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,15 @@ plugins {
 }
 
 android {
-    compileSdk 34
+    compileSdk 35
     namespace 'org.swisseph'
 
     defaultConfig {
         applicationId "org.swisseph"
         minSdk 24
-        targetSdk 33
-        versionCode 14
-        versionName "2.10.03j3d"
+        targetSdk 35
+        versionCode 15
+        versionName "2.10.03j5g"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,7 +30,7 @@ android {
 dependencies {
     implementation 'swisseph:swe:2.10.03j3d'
     implementation 'swisseph:swe-jyotisa:2.10.03j3d'
-    implementation 'swisseph:swe-android:2.10.03j3g'
+    implementation 'swisseph:swe-android:2.10.03j5g'
 
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'commons-io:commons-io:2.6'
